Move reports folder to data source folder.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,25 +35,133 @@
     "        f.write(obj)\n",
     "\n",
     "def patients_and_descriptive_header(df:pd.DataFrame, header):\n",
-    "    ids = df['PatientId'].values\n",
-    "    str_ids = \"\\r\\n\".join(ids)\n",
-    "    a =  header + \"\\r\\n\" + str_ids\n",
+    "    #ids = df['PatientId'].values\n",
+    "    #str_ids = \"\\n\".join(ids)\n",
+    "    str_ids = df.to_string()\n",
+    "    a =  header + \"\\n\" + str_ids\n",
     "    return a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHECK NoDxDate? REPORT NoDxDate.txt has *30* diagnoses of Brain without diagnosis dates.\n",
+      "CHECK NoDxDate? REPORT NoDxDate.txt has *3* diagnoses of Brain without diagnosis dates.\n",
       "----\n",
       "Resulting patient IDs = 1775\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PatientId</th>\n",
+       "      <th>DiagnosisDate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5011</td>\n",
+       "      <td>1964-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>316609</td>\n",
+       "      <td>1965-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>349102</td>\n",
+       "      <td>1966-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6873</td>\n",
+       "      <td>1971-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8613</td>\n",
+       "      <td>1976-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1770</th>\n",
+       "      <td>412923</td>\n",
+       "      <td>2019-10-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1771</th>\n",
+       "      <td>412784</td>\n",
+       "      <td>2019-10-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1772</th>\n",
+       "      <td>263490</td>\n",
+       "      <td>2019-12-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1773</th>\n",
+       "      <td>416349</td>\n",
+       "      <td>2019-12-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1774</th>\n",
+       "      <td>416837</td>\n",
+       "      <td>2019-12-05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1775 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PatientId DiagnosisDate\n",
+       "0         5011    1964-07-01\n",
+       "1       316609    1965-07-01\n",
+       "2       349102    1966-07-01\n",
+       "3         6873    1971-07-01\n",
+       "4         8613    1976-07-01\n",
+       "...        ...           ...\n",
+       "1770    412923    2019-10-24\n",
+       "1771    412784    2019-10-29\n",
+       "1772    263490    2019-12-03\n",
+       "1773    416349    2019-12-05\n",
+       "1774    416837    2019-12-05\n",
+       "\n",
+       "[1775 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -74,7 +182,7 @@
     "dxRows = table_demographics[table_demographics.Status.eq('Diagnosis Date')]\n",
     "diseaseRows = dxRows[dxRows.StatusDisease.eq(diseaseChosen)].sort_values('Date')\n",
     "\n",
-    "dxNanRows = diseaseRows[diseaseRows.Date.isna()]\n",
+    "dxNanRows = diseaseRows[diseaseRows.Date.isna()][['PatientId']]\n",
     "if(dxNanRows.size > 0):\n",
     "    print('CHECK NoDxDate? REPORT NoDxDate.txt has *' +str(dxNanRows.size)+'* diagnoses of '+diseaseChosen+' without diagnosis dates.')\n",
     "    report_body = patients_and_descriptive_header(dxNanRows, 'Patients with \"'+diseaseChosen+\" but no DiagnosisDate:\")\n",
@@ -82,7 +190,10 @@
     "else:\n",
     "    print('CHECK NoDxDate? OK')\n",
     "    print('TBD: delete existing NoDxDate.txt report.')\n",
-    "\n",
+    "    if os.path.exists('reports/NoDxDate.txt'):\n",
+    "        os.remove('reports/NoDxDate.txt')\n",
+    "        print('REMOVED NoDxDate.txt')\n",
+    "        \n",
     "diseaseDatedRows = diseaseRows[diseaseRows.Date.isna()==False]\n",
     "#print(diseaseRows[diseaseRows.PatientId.eq('1920')])\n",
     "print('----')\n",
@@ -93,8 +204,21 @@
     "        patientid_date_dict[pid] = row['Date']\n",
     "    else:\n",
     "        pass\n",
-    "print('Resulting patient IDs = ' + str(len(patientid_date_dict)))    \n",
-    "#print(patientid_date_dict['1920'])\n"
+    "print('Resulting patient IDs = ' + str(len(patientid_date_dict)))   \n",
+    "#patients_first_dx = pd.DataFrame.from_dict(patientid_date_dict, orient='index', columns=['PatientId'])\n",
+    "#patients_first_dx.set_index('PatientId', inplace=True)  \n",
+    "#patients_first_dx\n",
+    "\n",
+    "data = []\n",
+    "for key in patientid_date_dict.keys():\n",
+    "    new_row = [key, patientid_date_dict[key]]\n",
+    "    data.append(new_row)\n",
+    "patients_first_dx = pd.DataFrame(data, columns=[\"PatientId\", \"DiagnosisDate\"])\n",
+    "report_body = patients_and_descriptive_header(patients_first_dx, 'Patients First Diagnosis Date')\n",
+    "\n",
+    "\n",
+    "save_file_and_folder('reports/PatientsFirstDx.txt', report_body)\n",
+    "patients_first_dx\n"
    ]
   },
   {
