--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,138 +44,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CHECK NoDxDate? REPORT NoDxDate.txt has *3* diagnoses of Brain without diagnosis dates.\n",
-      "----\n",
-      "Resulting patient IDs = 1775\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PatientId</th>\n",
-       "      <th>DiagnosisDate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5011</td>\n",
-       "      <td>1964-07-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>316609</td>\n",
-       "      <td>1965-07-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>349102</td>\n",
-       "      <td>1966-07-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6873</td>\n",
-       "      <td>1971-07-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8613</td>\n",
-       "      <td>1976-07-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1770</th>\n",
-       "      <td>412923</td>\n",
-       "      <td>2019-10-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1771</th>\n",
-       "      <td>412784</td>\n",
-       "      <td>2019-10-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1772</th>\n",
-       "      <td>263490</td>\n",
-       "      <td>2019-12-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1773</th>\n",
-       "      <td>416349</td>\n",
-       "      <td>2019-12-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1774</th>\n",
-       "      <td>416837</td>\n",
-       "      <td>2019-12-05</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1775 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     PatientId DiagnosisDate\n",
-       "0         5011    1964-07-01\n",
-       "1       316609    1965-07-01\n",
-       "2       349102    1966-07-01\n",
-       "3         6873    1971-07-01\n",
-       "4         8613    1976-07-01\n",
-       "...        ...           ...\n",
-       "1770    412923    2019-10-24\n",
-       "1771    412784    2019-10-29\n",
-       "1772    263490    2019-12-03\n",
-       "1773    416349    2019-12-05\n",
-       "1774    416837    2019-12-05\n",
-       "\n",
-       "[1775 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from openpyxl import Workbook\n",
     "from openpyxl import load_workbook\n",
     "import pandas as pd\n",
+    "import os\n",
+    "import errno\n",
+    "import sys\n",
     "\n",
     "dataset_folder = '../Caisis_NonPublicData/Brain'\n",
     "diseaseChosen = 'Brain'\n",
     "\n",
     "knownTables = ['Demographics', 'Status', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
     "#print(knownTables)\n",
+    "status_fullpath = dataset_folder +'/00_raw_csv/Status.csv'\n",
+    "if not os.path.exists(dataset_folder +'/00_raw_csv'):\n",
+    "    sys.exit('ERROR: Cannot find folder \"00_raw_csv\".')\n",
     "\n",
-    "table_demographics = pd.read_csv(dataset_folder +'/RawCSVs/' + knownTables[1] +'.csv') #'Demographics.csv')\n",
+    "if not os.path.exists(status_fullpath):\n",
+    "    sys.exit('ERROR: Status.csv file not found at ' + status_fullpath)\n",
+    "\n",
+    "table_demographics = pd.read_csv(status_fullpath) #'Demographics.csv')\n",
     "table_demographics['Date'] =pd.to_datetime(table_demographics.StatusDate)\n",
     "table_demographics['PatientId'] =  table_demographics['PatientId'].astype(str)\n",
     "\n",
@@ -186,12 +78,13 @@
     "if(dxNanRows.size > 0):\n",
     "    print('CHECK NoDxDate? REPORT NoDxDate.txt has *' +str(dxNanRows.size)+'* diagnoses of '+diseaseChosen+' without diagnosis dates.')\n",
     "    report_body = patients_and_descriptive_header(dxNanRows, 'Patients with \"'+diseaseChosen+\" but no DiagnosisDate:\")\n",
-    "    save_file_and_folder('reports/NoDxDate.txt', report_body)\n",
+    "#    save_file_and_folder('reports/NoDxDate.txt', report_body)\n",
+    "    save_file_and_folder(dataset_folder+'/reports/NoDxDate.txt', report_body)\n",
     "else:\n",
     "    print('CHECK NoDxDate? OK')\n",
     "    print('TBD: delete existing NoDxDate.txt report.')\n",
-    "    if os.path.exists('reports/NoDxDate.txt'):\n",
-    "        os.remove('reports/NoDxDate.txt')\n",
+    "    if os.path.exists(dataset_folder+'/reports/NoDxDate.txt'):\n",
+    "        os.remove(dataset_folder+'/reports/NoDxDate.txt')\n",
     "        print('REMOVED NoDxDate.txt')\n",
     "        \n",
     "diseaseDatedRows = diseaseRows[diseaseRows.Date.isna()==False]\n",
@@ -217,7 +110,7 @@
     "report_body = patients_and_descriptive_header(patients_first_dx, 'Patients First Diagnosis Date')\n",
     "\n",
     "\n",
-    "save_file_and_folder('reports/PatientsFirstDx.txt', report_body)\n",
+    "save_file_and_folder(dataset_folder+'/reports/PatientsFirstDx.txt', report_body)\n",
     "patients_first_dx\n"
    ]
   },
