improved loading field from demographics

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,10 +18,11 @@
     "import errno\n",
     "import sys\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Brain'\n",
+    "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
     "diseaseChosen = 'Brain'\n",
     "#knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
-    "knownTables = ['Demographics', 'Encounters', 'Procedures', 'Path Stage Grade', 'Social History', 'Radiation Therapy'  ]\n",
+    "# table Status is treated separately, first.\n",
+    "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
     "patients_first_dx = pd.DataFrame()   # just PatientId and DiagnosisDate\n",
     "data_clinical_patient = pd.DataFrame() # Will become the data_clinical_patient table.\n",
     "loaded_tables_dict = {}\n",
@@ -55,13 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_patients_first_dx():\n",
     "    global patients_first_dx, data_clinical_patient\n",
-    "\n",
+    "    print(\"==================================\")\n",
+    "    print(dataset_folder)\n",
     "    status_fullpath = dataset_folder +'/raw_csv/Status.csv'\n",
     "    if not os.path.exists(dataset_folder +'/raw_csv'):\n",
     "        sys.exit('ERROR: Cannot find folder \"raw_csv\".')\n",
@@ -119,69 +121,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_all_tables():\n",
     "    global loaded_tables_dict\n",
     "    for tableName in knownTables:\n",
-    "        print('attempting to read ' + tableName+'.csv...')\n",
-    "        df = pd.read_csv(dataset_folder+'/raw_csv/'+tableName+'.csv')\n",
-    "        df = df.astype({\"PatientId\": str})\n",
-    "        #df.set_index('PatientId', inplace=True)\n",
-    "        #print(df.head(2))\n",
-    "        loaded_tables_dict[tableName] = df"
+    "        full_path = dataset_folder+'/raw_csv/'+tableName+'.csv'\n",
+    "        if not os.path.exists(full_path):\n",
+    "            print(\"WARN -- missing table \"+tableName)\n",
+    "        else:\n",
+    "            print('Reading ' + tableName+'.csv...')\n",
+    "            df = pd.read_csv(full_path)\n",
+    "            df = df.astype({\"PatientId\": str})\n",
+    "            #df.set_index('PatientId', inplace=True)\n",
+    "            #print(df.head(2))\n",
+    "            loaded_tables_dict[tableName] = df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_demographics():\n",
+    "    tname = \"Demographics\"\n",
     "    global patients_first_dx, data_clinical_patient, loaded_tables_dict\n",
-    "    current_table = loaded_tables_dict['Demographics']\n",
-    "    print(\"current columns...\")\n",
-    "    #print(current_table.columns)\n",
-    "    if 'PtGender' in current_table.columns:\n",
-    "        print(\"================gender===\")\n",
-    "        data_clinical_patient.insert(1, 'PtGender', None)\n",
+    "    if (tname in loaded_tables_dict) == False:\n",
+    "        print(\"WARN -- Could not process table \"+tname)\n",
+    "    else:\n",
+    "        current_table = loaded_tables_dict[tname]\n",
     "\n",
-    "        def setGender(pid):\n",
-    "            gg = current_table.loc[current_table['PatientId'] == str(pid)]\n",
-    "            return gg['PtGender'].iloc[0]   \n",
+    "        if 'PtGender' in current_table.columns:\n",
+    "            data_clinical_patient.insert(1, 'PtGender', None)\n",
     "\n",
-    "        gender_results = data_clinical_patient['PatientId'].apply(setGender)\n",
-    "        print(\"results......\")\n",
-    "        #print(gender_results)\n",
-    "        data_clinical_patient['PtGender'] = gender_results\n",
-    "        #print(data_clinical_patient.head(12))\n"
+    "            def setGender(pid):\n",
+    "                gg = current_table.loc[current_table['PatientId'] == str(pid)]\n",
+    "                return gg['PtGender'].iloc[0]   \n",
+    "\n",
+    "            gender_results = data_clinical_patient['PatientId'].apply(setGender)\n",
+    "            #print(\"results......\")\n",
+    "            #print(gender_results)\n",
+    "            data_clinical_patient['PtGender'] = gender_results\n",
+    "            #print(data_clinical_patient.head(12))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHECK NoDxDate? REPORT NoDxDate.txt has *3* diagnoses of Brain without diagnosis dates.\n",
+      "==================================\n",
+      "../Caisis_NonPublicData/Brain_nov2021\n",
+      "CHECK NoDxDate? REPORT NoDxDate.txt has *6* diagnoses of Brain without diagnosis dates.\n",
       "----\n",
-      "Resulting patient IDs = 1775\n",
-      "(1775, 2)\n",
-      "attempting to read Demographics.csv...\n",
-      "attempting to read Encounters.csv...\n",
-      "attempting to read Procedures.csv...\n",
-      "attempting to read Path Stage Grade.csv...\n",
-      "attempting to read Social History.csv...\n",
-      "attempting to read Radiation Therapy.csv...\n",
-      "current columns...\n",
+      "Resulting patient IDs = 2164\n",
+      "(2164, 2)\n",
+      "Reading Clinical Stages.csv...\n",
+      "Reading Demographics.csv...\n",
+      "Reading Encounters.csv...\n",
+      "Reading Medical Therapy.csv...\n",
+      "Reading Pathology.csv...\n",
+      "Reading Procedures.csv...\n",
+      "Reading Radiation.csv...\n",
+      "WARN -- missing table Social History\n",
       "================gender===\n",
-      "results......\n",
       "DONE\n"
      ]
     }
@@ -194,7 +204,7 @@
     "process_demographics()\n",
     "\n",
     "print(\"DONE\")\n",
-    "#print(data_clinical_patient)\n"
+    "#print(data_clinical_patient.to_string())\n"
    ]
   },
   {
